--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@material/form-field": "^11.0.0",
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.0",
+    "lodash": "^4.17.21",
+    "npm": "^7.13.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.16.9",
     "tslib": "^2.0.0",
