--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "~11.2.7",
     "@material/form-field": "^11.0.0",
     "@popperjs/core": "^2.9.2",
+    "angular-filter": "^0.5.17",
     "bootstrap": "^5.0.0",
+    "bootstrap-icons": "^1.5.0",
     "lodash": "^4.17.21",
     "npm": "^7.13.0",
     "rxjs": "~6.6.0",
