--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,8 @@
                             "node_modules/bootstrap/dist/css/bootstrap.min.css"
                         ],
                         "scripts": [
+                            "node_modules/html2canvas/dist/html2canvas.min.js",
+                            "node_modules/jspdf/dist/jspdf.min.js",
                             "node_modules/@popperjs/core/dist/umd/popper.min.js",
                             "node_modules/bootstrap/dist/js/bootstrap.min.js"
                         ]
