--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
     "angular-filter": "^0.5.17",
     "bootstrap": "^5.0.0",
     "bootstrap-icons": "^1.5.0",
+    "html2canvas": "^1.0.0-rc.7",
+    "jspdf": "^1.5.3",
     "lodash": "^4.17.21",
+    "ng2-charts": "^2.4.2",
     "npm": "^7.13.0",
+    "pdfmake": "^0.1.71",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.16.9",
     "tslib": "^2.0.0",
@@ -37,7 +41,9 @@
     "@angular-devkit/build-angular": "~0.1102.6",
     "@angular/cli": "~11.2.6",
     "@angular/compiler-cli": "~11.2.7",
+    "@types/html2canvas": "0.0.36",
     "@types/jasmine": "~3.6.0",
+    "@types/jspdf": "^2.0.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
